# univercity_note

./: .gitignore  AGENTS.md  README.md  a.out  main.py  out.text  pyproject.toml  template.typ
2026-spring/: AGENTS.md  memo.md
2026-spring/information_system/: 01.typ  02.typ  04.typ  05.typ  06.typ  08.typ  09.typ  report01.typ
2026-spring/math_analysis/: 01.html  01.typ  01_report.typ  02.typ  03.typ  04.typ  06.typ  07.typ  08.typ  09.typ  category_theory.typ  report02.typ  report03.typ  report04.typ  report06.typ  report07.typ  repory08.typ
2026-spring/math_engineer/: 01.tex  01.typ  02.ipynb  03.ipynb  1_数理工学モデル化演習第8回.ipynb  202410178_今村隼人_kadai_1.ipynb  202510178_今村隼人_kadai_2.ipynb  test.tex
2026-spring/math_engineer/09/: 2_数理工学モデル化演習第9回 (1).ipynb  report09.typ  simulation_09.py
2026-spring/math_engineer/10/: 3_数理工学モデル化演習第10回.ipynb
2026-spring/math_engineer/data/: student_pairs.csv  students.csv
2026-spring/strategic_system/: commute_satisfaction_public_data.md  estat_data_based_theme_candidates.md  info_communication_scitech_data_candidates.md  theme_candidates.md
2026-spring/sys_pro/: 02.html  03.html  105.c  106.c  204.c  212.c  301.c  303_head.c  303_tail.c  bsd.txt  report01.txt  report02.txt  report03.txt  report03_revision_intentions.md  report_rule.html
2026-spring/temp/: t.ipynb
2026-spring/time_series_analysis/: 02.typ  06.typ  TSA2026_HW2_202410178_ImamuraHayato.xlsx  TimeSeries2026_02_c.md  gaku-jk2542.csv  report03.typ  report04.typ  report05.typ  report06.typ
chore/: Cargo.toml
chore/src/: main.rs
memo/: pandas.md  pulp.md
(+85 files in other folders)
